Uglify and concat tasks

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   </head>
   <body>
     <p>Hello world! This is HTML5 Boilerplate.</p>
+    <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
+    <script type="text/javascript" src="dist/js/vendor/bootstrap.js"></script>
   </body>
 </html>
