--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dist/css/vendor/bootstrap.css">
+    <link rel="stylesheet" href="dist/css/font-awesome.css">
   </head>
   <body>
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <p>Hello world! This is HTML5 Boilerplate.<i class="fa fa-camera-retro fa-lg"></i> fa-lg</p>
     <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
     <script type="text/javascript" src="dist/js/vendor/bootstrap.js"></script>
   </body>
