Changes to Gruntfile, bootstrap instead of sass in bower

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="dist/css/font-awesome.css">
   </head>
   <body>
-    <p>Hello world! This is HTML5 Boilerplate.<i class="fa fa-camera-retro fa-lg"></i> fa-lg</p>
+    <nav class="navbar navbar-default" role="navigation">
+    </nav>
     <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
     <script type="text/javascript" src="dist/js/vendor/bootstrap.js"></script>
   </body>
