Trying out changes

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>BS Social Feed</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="dist/css/vendor/bootstrap.css">
-    <link rel="stylesheet" href="dist/css/font-awesome.css">
+    <link rel="stylesheet" href="dist/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="dist/css/font-awesome.min.css">
+    <link rel="stylesheet" href="dist/css/bs-social-feed.css">
   </head>
   <body>
     <nav class="navbar navbar-default" role="navigation">
     </nav>
     <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
-    <script type="text/javascript" src="dist/js/vendor/bootstrap.js"></script>
+    <script type="text/javascript" src="dist/js/vendor/bootstrap.min.js"></script>
   </body>
 </html>
