--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dist/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="dist/css/font-awesome.min.css">
+    <link rel="stylesheet" href="dist/css/vendor/font-awesome.min.css">
     <link rel="stylesheet" href="dist/css/bs-social-feed.css">
   </head>
   <body>
