--- a/demo/landing.html
+++ b/demo/landing.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>BS Social Feed</title>
+  <title>Social Feed - Landing Page</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="dist/css/vendor/bootstrap.min.css">
-  <link rel="stylesheet" href="dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="dist/css/bs-social-feed.css">
+  <link rel="stylesheet" href="../dist/css/vendor/bootstrap.min.css">
+  <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
+  <link rel="stylesheet" href="../dist/css/bs-social-feed.css">
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
@@ -22,15 +22,9 @@
         </button>
         <a class="navbar-brand" href="#">BS Social Feed</a>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Getting Started</a></li>
-        <li><a href="demo/landing.html">Demo</a></li>
-        </ul>
-      </div>
     </div>
   </nav>
-  <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
+  <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
 </body>
 </html>
