Demo Landing page design

--- a/demo/landing.html
+++ b/demo/landing.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../dist/css/vendor/bootstrap.min.css">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
   <link rel="stylesheet" href="../dist/css/bs-social-feed.css">
+  <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
@@ -20,7 +21,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">BS Social Feed</a>
+        <a id="logo" class="navbar-brand" href>BS</a>
       </div>
     </div>
   </nav>
