Change package name

--- a/demo/landing.html
+++ b/demo/landing.html
@@ -8,11 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/css/vendor/bootstrap.min.css">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/bs-social-feed.css">
+  <link rel="stylesheet" href="../dist/css/social-ui.css">
   <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
-  <nav class="navbar navbar-default" role="navigation">
+  <nav id="landing-nav" class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -27,5 +27,7 @@
   </nav>
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
   <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
+  <script type="text/javascript" src="js/demo.js"></script>
 </body>
 </html>
