--- a/demo/home.html
+++ b/demo/home.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Bootstrap Social UI</title>
+  <title>Social Feed - Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="dist/css/vendor/bootstrap.min.css">
-  <link rel="stylesheet" href="dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="dist/css/social-ui.css">
+  <link rel="stylesheet" href="../dist/css/vendor/bootstrap.min.css">
+  <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
+  <link rel="stylesheet" href="../dist/css/social-ui.css">
+  <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
@@ -20,17 +21,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">BS Social UI</a>
+        <a id="logo" class="navbar-brand" href>BS</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Getting Started</a></li>
-        <li><a href="demo/home.html">Demo</a></li>
+        <li><a href="landing.html">Login</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
+  <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
 </body>
 </html>
