--- a/demo/home.html
+++ b/demo/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Social Feed - Home</title>
+  <title>Social UI - Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/css/vendor/bootstrap.min.css">
