Backstretch image in demo landing and home page

--- a/demo/landing.html
+++ b/demo/landing.html
@@ -28,6 +28,6 @@
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
   <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
-  <script type="text/javascript" src="js/demo.js"></script>
+  <script type="text/javascript" src="js/landing.js"></script>
 </body>
 </html>
