--- a/demo/home.html
+++ b/demo/home.html
@@ -25,8 +25,12 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Getting Started</a></li>
-        <li><a href="landing.html">Login</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img class="avatar" src="http://www.gravatar.com/avatar/742fd360df942c97960ec92e497b8dd4.png" alt="Profile"><span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="landing.html">Logout</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
