Login form, navbar link style

--- a/demo/home.html
+++ b/demo/home.html
@@ -28,6 +28,8 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img class="avatar" src="http://www.gravatar.com/avatar/742fd360df942c97960ec92e497b8dd4.png" alt="Profile"><span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Settings</a></li>
               <li><a href="landing.html">Logout</a></li>
             </ul>
           </li>
