--- a/demo/landing.html
+++ b/demo/landing.html
@@ -15,16 +15,37 @@
   <nav id="landing-nav" class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a id="logo" class="navbar-brand" href>BS</a>
+        <a id="logo" class="navbar-brand" href="../index.html">BS</a>
       </div>
     </div>
   </nav>
+  <div class="container" style="margin-top: 50px;">
+    <div class="row">
+      <div class="col-lg-6">
+
+      </div>
+      <div class="col-lg-4 col-lg-offset-2">
+        <div class="form-panel">
+          <form action="home.html" role="form">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox"> Remember me
+              </label>
+            </div>
+            <button type="submit" class="btn btn-success">Login</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
   <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
