--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       </div>
     </div>
   </nav>
+  <div class="container">
+  </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
   <script type="text/javascript" src="dist/js/vendor/bootstrap.min.js"></script>
 </body>
