Grunt  file watch

--- a/demo/home.html
+++ b/demo/home.html
@@ -39,6 +39,7 @@
   </nav>
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
   <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../src/js/menu.js"></script>
   <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
   <script type="text/javascript" src="js/demo.js"></script>
 </body>
