Newfeed and left sidebar, profile pic, cover pic

--- a/demo/home.html
+++ b/demo/home.html
@@ -37,6 +37,29 @@
       </div>
     </div>
   </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="left-panel">
+          <div class="cover-pic">
+            <img src="http://www.gravatar.com/avatar/742fd360df942c97960ec92e497b8dd4.png" alt="" class="profile-pic">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="well">
+          
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="well">
+          
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
   <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
   <script type="text/javascript" src="../src/js/menu.js"></script>
