Add compose textarea, notification in navbar

--- a/demo/home.html
+++ b/demo/home.html
@@ -26,6 +26,17 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fa fa-bell"></i>
+            </a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Notification 1</a></li>
+              <li><a href="#">Notification 2</a></li>
+              <li><a href="#">Notification 3</a></li>
+              <li><a href="#">Notification 4</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img class="avatar" src="http://www.gravatar.com/avatar/742fd360df942c97960ec92e497b8dd4.png" alt="Profile"><span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="#">Profile</a></li>
@@ -44,6 +55,12 @@
         <div class="left-panel">
           <div class="cover-pic">
             <img src="http://www.gravatar.com/avatar/742fd360df942c97960ec92e497b8dd4.png" alt="" class="profile-pic">
+          </div>
+          <div class="about">
+            <label id="name">Sudharshan Iyer</label>
+            <label id="username">@sudharshan_iyer</label>
+            <textarea name="new-microblog" id="new-microblog" placeholder="Compose Microblog" class="form-control">
+            </textarea>
           </div>
         </div>
       </div>
