--- a/demo/home.html
+++ b/demo/home.html
@@ -61,7 +61,7 @@
             <label id="username">@sudharshan_iyer</label>
             <form role="form">
               <div class="form-group">
-                <textarea id="new-microblog" rows="3" cols="20" class="form-control" placeholder="Compose Micropost"></textarea>
+                <textarea id="new-microblog" rows="3" cols="20" class="form-control" placeholder="Compose Micropost" autofocus></textarea>
               </div>
               <button id="share" class="btn btn-primary pull-right">Share</button>
             </form>
@@ -74,8 +74,30 @@
         </div>
       </div>
       <div class="col-lg-3">
-        <div class="well">
-          
+        <div class="right-panel">
+          <label class="title">Suggestions</label>
+          <ul class="suggestions">
+            <li>
+              <img src="../img/avatar-1.png" alt="" class="avatar">
+              <label class="name">Smokey Dude</label>
+            </li>
+            <li>
+              <img src="../img/avatar-2.png" alt="" class="avatar">
+              <label class="name">Long Hair</label>
+            </li>
+            <li>
+              <img src="../img/avatar-3.png" alt="" class="avatar">
+              <label class="name">Geeky Gal</label>
+            </li>
+            <li>
+              <img src="../img/avatar-4.png" alt="" class="avatar">
+              <label class="name">Hat Dude</label>
+            </li>
+            <li>
+              <img src="../img/avatar-5.png" alt="" class="avatar">
+              <label class="name">Dudette</label>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
