Design cards, suggestions and trends

--- a/demo/home.html
+++ b/demo/home.html
@@ -52,7 +52,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-3">
-        <div class="left-panel clearfix">
+        <div class="card clearfix">
           <div class="cover-pic">
             <img src="http://www.gravatar.com/avatar/742fd360df942c97960ec92e497b8dd4.png" alt="" class="profile-pic">
           </div>
@@ -66,17 +66,27 @@
               <button id="share" class="btn btn-primary pull-right">Share</button>
             </form>
           </div>
+        </div><br>
+        <div class="card">
+          <label class="panel-title">Trends</label>
+          <ul class="panel-list">
+            <li>Chennai</li>
+            <li>Github</li>
+            <li>Rails</li>
+            <li>Theme</li>
+            <li>Apple</li>
+          </ul>
         </div>
       </div>
       <div class="col-lg-6">
-        <div class="well">
+        <div class="card">
           
         </div>
       </div>
       <div class="col-lg-3">
-        <div class="right-panel">
-          <label class="title">Suggestions</label>
-          <ul class="suggestions">
+        <div class="card">
+          <label class="panel-title">Suggestions</label>
+          <ul class="panel-list">
             <li>
               <img src="../img/avatar-1.png" alt="" class="avatar">
               <label class="name">Smokey Dude</label>
@@ -98,6 +108,11 @@
               <label class="name">Dudette</label>
             </li>
           </ul>
+        </div>
+        <div class="card">
+          <div class="footer">
+            <label>© 2014 Author Blog Social-UI About Github Getting Started License</label>
+          </div>
         </div>
       </div>
     </div>
