--- a/demo/home.html
+++ b/demo/home.html
@@ -24,6 +24,11 @@
         <a id="logo" class="navbar-brand" href="../index.html">BS</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+        </form>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle navbar-icons" data-toggle="dropdown">
@@ -57,11 +62,11 @@
             <img src="http://www.gravatar.com/avatar/742fd360df942c97960ec92e497b8dd4.png" alt="" class="profile-pic">
           </div>
           <div class="about">
-            <label id="name">Sudharshan Iyer</label>
-            <label id="username">@sudharshan_iyer</label>
+            <label class="name">Sudharshan Iyer</label>
+            <label class="username">@sudharshan_iyer</label>
             <form role="form">
               <div class="form-group">
-                <textarea id="new-microblog" rows="3" cols="20" class="form-control" placeholder="Compose Micropost" autofocus></textarea>
+                <textarea id="new-microblog" rows="3" cols="20" class="form-control" placeholder="Compose Micropost"></textarea>
               </div>
               <button id="share" class="btn btn-primary pull-right">Share</button>
             </form>
@@ -80,7 +85,17 @@
       </div>
       <div class="col-lg-6">
         <div class="card">
-          
+          <label class="panel-title">News Feed</label>
+          <div class="micropost">
+            <img src="../img/avatar-1.png" alt="" class="avatar">
+            <label class="name">Smokey Dude</label><br>
+            <span>Hello This is my First Post</span>
+          </div>
+          <div class="micropost">
+            <img src="../img/avatar-1.png" alt="" class="avatar">
+            <label class="name">Smokey Dude</label><br>
+            <span>Hello This is my Second Post</span>
+          </div>
         </div>
       </div>
       <div class="col-lg-3">
