--- a/demo/home.html
+++ b/demo/home.html
@@ -26,7 +26,10 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search">
+              <div class="input-group-addon"><i class="fa fa-search"></i></div>
+            </div>
           </div>
         </form>
         <ul class="nav navbar-nav navbar-right">
@@ -73,7 +76,7 @@
           </div>
         </div><br>
         <div class="card">
-          <label class="panel-title">Trends</label>
+          <label class="panel-title"><i class="fa fa-line-chart"></i> Trends</label>
           <ul class="panel-list">
             <li>Chennai</li>
             <li>Github</li>
