--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Getting Started</a></li>
-        <li><a href="demo/home.html">Demo</a></li>
+          <li><a href="#">Getting Started</a></li>
+          <li><a href="demo/home.html">Demo</a></li>
         </ul>
       </div>
     </div>
@@ -133,6 +133,30 @@
           </div>
         </div>
       </nav>
+    </div>
+    <div class="row">
+      <h2><b>Forms</b></h2>
+      <div class="col-lg-4">
+        <div class="well card">
+          <h4><b>Login</b></h4><hr>
+          <form action="#" role="form">
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input id="email" type="text" class="form-control" placeholder="email@example.com">
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input id="password" type="password" class="form-control" placeholder="password">
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox"> Remember me
+              </label>
+            </div><br>
+            <button type="submit" class="btn btn-success">Login</button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
