Add multiple pages

--- a/css-page.html
+++ b/css-page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>UI-Social</title>
+  <title>CSS - UI Social</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/css/vendor/font-awesome.min.css">
@@ -35,6 +35,7 @@
   </nav>
   <div class="container">
     <div class="row">
+      <h2><b>Typography</b></h2><hr>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
