--- a/css-page.html
+++ b/css-page.html
@@ -36,6 +36,24 @@
   <div class="container">
     <div class="row">
       <h2><b>Typography</b></h2><hr>
+      <div class="col-lg-6">
+        <h3><b>Headings</b></h3>
+        <h1>h1 Heading</h1>
+        <h2>h2 Heading</h2>
+        <h3>h3 Heading</h3>
+        <h4>h4 Heading</h4>
+        <h5>h5 Heading</h5>
+        <h6>h6 Heading</h6>
+      </div>
+      <div class="col-lg-6">
+        <h3><b>Small</b></h3>
+        <h1><small>h1.small</small></h1>
+        <h2><small>h2.small</small></h2>
+        <h3><small>h3.small</small></h3>
+        <h4><small>h4.small</small></h4>
+        <h5><small>h5.small</small></h5>
+        <h6><small>h6.small</small></h6>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
