--- a/css-page.html
+++ b/css-page.html
@@ -34,26 +34,117 @@
     </div>
   </nav>
   <div class="container">
-    <div class="row">
-      <h2><b>Typography</b></h2><hr>
-      <div class="col-lg-6">
-        <h3><b>Headings</b></h3>
-        <h1>h1 Heading</h1>
-        <h2>h2 Heading</h2>
-        <h3>h3 Heading</h3>
-        <h4>h4 Heading</h4>
-        <h5>h5 Heading</h5>
-        <h6>h6 Heading</h6>
+    <div class="col-lg-10 col-lg-offset-1">
+      <h2><b>Typography</b></h2>
+      <div class="row">
+        <div class="col-lg-6">
+          <h3><b>Headings</b></h3>
+          <h1>h1 Heading</h1>
+          <h2>h2 Heading</h2>
+          <h3>h3 Heading</h3>
+          <h4>h4 Heading</h4>
+          <h5>h5 Heading</h5>
+          <h6>h6 Heading</h6>
+        </div>
+        <div class="col-lg-6">
+          <h3><b>Small</b></h3>
+          <h1><small>h1.small</small></h1>
+          <h2><small>h2.small</small></h2>
+          <h3><small>h3.small</small></h3>
+          <h4><small>h4.small</small></h4>
+          <h5><small>h5.small</small></h5>
+          <h6><small>h6.small</small></h6>
+        </div>
       </div>
-      <div class="col-lg-6">
-        <h3><b>Small</b></h3>
-        <h1><small>h1.small</small></h1>
-        <h2><small>h2.small</small></h2>
-        <h3><small>h3.small</small></h3>
-        <h4><small>h4.small</small></h4>
-        <h5><small>h5.small</small></h5>
-        <h6><small>h6.small</small></h6>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Paragraph</b></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec blandit nibh non dapibus sodales. Aenean est lorem, faucibus eget nibh id, scelerisque maximus ligula. Duis ullamcorper commodo velit vitae eleifend. Duis nec magna a est pharetra consectetur eu semper felis. In convallis ac nunc ut euismod. Sed efficitur tempor ex. Nullam vitae libero et libero fermentum consequat. Nam a dapibus ante. Suspendisse ac dapibus felis, malesuada semper metus. Sed lobortis egestas euismod. Proin faucibus, ipsum ut mollis dignissim, orci quam faucibus purus, ut fermentum orci neque et ex. Curabitur vulputate aliquam lacus, vel ultrices nisi dictum a. Etiam tortor sem, blandit in semper at, vehicula id lacus. Donec suscipit, est et pharetra pretium, urna sapien accumsan magna, eu finibus arcu dui ut arcu. Praesent eget risus non purus lobortis tempor vitae vitae augue.</p>
+
+          <p>Nulla aliquet ligula massa. Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus. Aenean enim elit, euismod eget ex sit amet, ornare tempor nisi. Nullam vitae mauris sed tortor rutrum fermentum at quis sapien. Nunc nec vehicula augue. Vestibulum ornare auctor iaculis. Integer porttitor eget enim id molestie.</p>
+        </div>
       </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Marked text</b></h3>
+          You can use the mark tag to <mark>highlight</mark> text.
+          <h3><b>Abbreviations</b></h3>
+          An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>
+          <h3><b>Small</b></h3>
+          <small>This text is small</small>
+          <h3><b>Blockquotes</b></h3>
+          <blockquote>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          </blockquote>
+          <blockquote class="blockquote-reverse">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          </blockquote>
+        </div>
+      </div>
+      <hr>
+      <h2><b>Buttons</b></h2>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Options</b></h3>
+          <button type="button" class="btn btn-default">Default</button>
+          <button type="button" class="btn btn-primary">Primary</button>
+          <button type="button" class="btn btn-success">Success</button>
+          <button type="button" class="btn btn-info">Info</button>
+          <button type="button" class="btn btn-warning">Warning</button>
+          <button type="button" class="btn btn-danger">Danger</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Button Sizes</b></h3>
+          <p>
+            <button type="button" class="btn btn-primary btn-lg">Large button</button>
+            <button type="button" class="btn btn-default btn-lg">Large button</button>
+          </p>
+          <p>
+            <button type="button" class="btn btn-primary">Default button</button>
+            <button type="button" class="btn btn-default">Default button</button>
+          </p>
+          <p>
+            <button type="button" class="btn btn-primary btn-sm">Small button</button>
+            <button type="button" class="btn btn-default btn-sm">Small button</button>
+          </p>
+          <p>
+            <button type="button" class="btn btn-primary btn-xs">Extra small button</button>
+            <button type="button" class="btn btn-default btn-xs">Extra small button</button>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Block Level Buttons</b></h3>
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="well">
+                <button type="button" class="btn btn-primary btn-md btn-block">Block level button</button>
+                <button type="button" class="btn btn-default btn-md btn-block">Block level button</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Active State</b></h3>
+          <button type="button" class="btn btn-primary btn-md active">Primary button</button>
+          <button type="button" class="btn btn-default btn-md active">Button</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Disabled State</b></h3>
+          <button type="button" class="btn btn-md btn-primary" disabled="disabled">Primary button</button>
+          <button type="button" class="btn btn-default btn-md" disabled="disabled">Button</button>
+        </div>
+      </div>
+      <br><hr>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
