--- a/components.html
+++ b/components.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="dist/css/social-ui.css">
+  <link rel="stylesheet" href="dist/css/ui-social.css">
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
