--- a/demo/home.html
+++ b/demo/home.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/css/vendor/bootstrap.min.css">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/social-ui.css">
+  <link rel="stylesheet" href="../dist/css/ui-social.css">
   <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
