--- a/css-page.html
+++ b/css-page.html
@@ -145,6 +145,10 @@
         </div>
       </div>
       <br><hr>
+      <h2><b>Color Swatches</b></h2>
+      <div class="row">
+        <div class="col-lg-12"></div>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
