--- a/css-page.html
+++ b/css-page.html
@@ -171,6 +171,7 @@
         <div class="col-lg-6">
           <h3><b>Horizontal Form</b></h3>
           <div class="well">
+            <br>
             <form class="form-horizontal" role="form">
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
@@ -309,6 +310,11 @@
         </div>
       </div>
       <hr>
+      <h2><b>Color Swatches</b></h2>
+      <div class="row">
+        <div class="col-lg-12">
+        </div>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
