--- a/demo/landing.html
+++ b/demo/landing.html
@@ -19,13 +19,13 @@
       </div>
     </div>
   </nav>
-  <div class="container" style="margin-top: 50px;">
+  <div class="container" style="margin-top: 100px;">
     <div class="row">
       <div class="col-lg-6">
 
       </div>
       <div class="col-lg-4 col-lg-offset-2">
-        <div class="form-panel">
+        <div class="well">
           <form action="home.html" role="form">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
