--- a/css-page.html
+++ b/css-page.html
@@ -310,9 +310,31 @@
         </div>
       </div>
       <hr>
-      <h2><b>Color Swatches</b></h2>
+      <h2><b>Color Swatches</b></h2><br>
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-2">
+          <div class="well well-sm"></div>
+          <div class="well well-sm"></div>
+        </div>
+        <div class="col-lg-2">
+          <div class="well well-sm"></div>
+          <div class="well well-sm"></div>
+        </div>
+        <div class="col-lg-2">
+          <div class="well well-sm"></div>
+          <div class="well well-sm"></div>
+        </div>
+        <div class="col-lg-2">
+          <div class="well well-sm"></div>
+          <div class="well well-sm"></div>
+        </div>
+        <div class="col-lg-2">
+          <div class="well well-sm"></div>
+          <div class="well well-sm"></div>
+        </div>
+        <div class="col-lg-2">
+          <div class="well well-sm"></div>
+          <div class="well well-sm"></div>
         </div>
       </div>
     </div>
