Tables in css page

--- a/components.html
+++ b/components.html
@@ -248,6 +248,18 @@
           </nav>
         </div>
       </div>
+      <hr>
+      <h2><b>Labels</b></h2>
+      <div class="row">
+        <div class="col-lg-12">
+          <span class="label label-default">Default</span>
+          <span class="label label-primary">Primary</span>
+          <span class="label label-success">Success</span>
+          <span class="label label-info">Info</span>
+          <span class="label label-warning">Warning</span>
+          <span class="label label-danger">Danger</span>
+        </div>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
