--- a/css-page.html
+++ b/css-page.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-lg-12">
           <h3><b>Paragraph</b></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec blandit nibh non dapibus sodales. Aenean est lorem, faucibus eget nibh id, scelerisque maximus ligula. Duis ullamcorper commodo velit vitae eleifend. Duis nec magna a est pharetra consectetur eu semper felis. In convallis ac nunc ut euismod. Sed efficitur tempor ex. Nullam vitae libero et libero fermentum consequat. Nam a dapibus ante. Suspendisse ac dapibus felis, malesuada semper metus. Sed lobortis egestas euismod. Proin faucibus, ipsum ut mollis dignissim, orci quam faucibus purus, ut fermentum orci neque et ex. Curabitur vulputate aliquam lacus, vel ultrices nisi dictum a. Etiam tortor sem, blandit in semper at, vehicula id lacus. Donec suscipit, est et pharetra pretium, urna sapien accumsan magna, eu finibus arcu dui ut arcu. Praesent eget risus non purus lobortis tempor vitae vitae augue.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec blandit nibh non dapibus sodales. Aenean est lorem, faucibus eget nibh id, scelerisque maximus ligula. Duis ullamcorper commodo velit vitae eleifend. Duis nec magna a est pharetra consectetur eu semper felis. In convallis ac nunc ut euismod. Sed efficitur tempor ex. Nullam vitae libero et libero fermentum consequat. Nam a dapibus ante. Suspendisse ac dapibus felis, malesuada semper metus.</p>
 
           <p>Nulla aliquet ligula massa. Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus. Aenean enim elit, euismod eget ex sit amet, ornare tempor nisi. Nullam vitae mauris sed tortor rutrum fermentum at quis sapien. Nunc nec vehicula augue. Vestibulum ornare auctor iaculis. Integer porttitor eget enim id molestie.</p>
         </div>
@@ -307,6 +307,188 @@
               <option value="2">Option 3</option>
             </select>
           </div>
+        </div>
+      </div>
+      <hr>
+      <h2><b>Tables</b></h2>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Basic</b></h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Country</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Tony</td>
+                <td>Stark</td>
+                <td>USA</td>
+              </tr>
+              <tr>
+                <td>Walter</td>
+                <td>White</td>
+                <td>USA</td>
+              </tr>
+              <tr>
+                <td>Sherlock</td>
+                <td>Holmes</td>
+                <td>UK</td>
+              </tr>
+              <tr>
+                <td>Sheldon</td>
+                <td>Cooper</td>
+                <td>USA</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Striped</b></h3>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Country</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Tony</td>
+                <td>Stark</td>
+                <td>USA</td>
+              </tr>
+              <tr>
+                <td>Walter</td>
+                <td>White</td>
+                <td>USA</td>
+              </tr>
+              <tr>
+                <td>Sherlock</td>
+                <td>Holmes</td>
+                <td>UK</td>
+              </tr>
+              <tr>
+                <td>Sheldon</td>
+                <td>Cooper</td>
+                <td>USA</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Bordered</b></h3>
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Country</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Tony</td>
+                <td>Stark</td>
+                <td>USA</td>
+              </tr>
+              <tr>
+                <td>Walter</td>
+                <td>White</td>
+                <td>USA</td>
+              </tr>
+              <tr>
+                <td>Sherlock</td>
+                <td>Holmes</td>
+                <td>UK</td>
+              </tr>
+              <tr>
+                <td>Sheldon</td>
+                <td>Cooper</td>
+                <td>USA</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Condensed</b></h3>
+          <table class="table table-condensed">
+            <thead>
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Country</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Tony</td>
+                <td>Stark</td>
+                <td>USA</td>
+              </tr>
+              <tr>
+                <td>Walter</td>
+                <td>White</td>
+                <td>USA</td>
+              </tr>
+              <tr>
+                <td>Sherlock</td>
+                <td>Holmes</td>
+                <td>UK</td>
+              </tr>
+              <tr>
+                <td>Sheldon</td>
+                <td>Cooper</td>
+                <td>USA</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Contextual</b></h3>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Country</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="success">
+                <td>Tony</td>
+                <td>Stark</td>
+                <td>USA</td>
+              </tr>
+              <tr class="danger">
+                <td>Walter</td>
+                <td>White</td>
+                <td>USA</td>
+              </tr>
+              <tr class="warning">
+                <td>Sherlock</td>
+                <td>Holmes</td>
+                <td>UK</td>
+              </tr>
+              <tr class="info">
+                <td>Sheldon</td>
+                <td>Cooper</td>
+                <td>USA</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
       <hr>
