--- a/components.html
+++ b/components.html
@@ -276,6 +276,34 @@
         </div>
       </div>
       <br><hr>
+      <h2><b>Alerts</b></h2>
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="alert alert-success alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert">
+            <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <span>You Got it Bro</span>
+          </div>
+          <div class="alert alert-info alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert">
+              <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+            </button>
+            <span>Follow this <a href="#" class="alert-link">Link</a></span>
+          </div>
+          <div class="alert alert-warning alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert">
+              <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+            </button>
+            <span>Do not do that!</span>
+          </div>
+          <div class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert">
+              <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+            </button>
+            <span>I am not in danger. <a href="#" class="alert-link">I am the danger!</a></span>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
