Panels and wells

--- a/components.html
+++ b/components.html
@@ -281,7 +281,8 @@
         <div class="col-lg-8">
           <div class="alert alert-success alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+              <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+            </button>
             <span>You Got it Bro</span>
           </div>
           <div class="alert alert-info alert-dismissible" role="alert">
@@ -399,6 +400,104 @@
             <div class="progress-bar progress-bar-danger" style="width: 10%">
               <span class="sr-only">10% Complete (danger)</span>
             </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <h2><b>Panels</b></h2>
+      <div class="row">
+        <div class="col-lg-6">
+          <h3><b>Basic</b></h3>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              Basic panel example
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <h3><b>Panel with heading</b></h3>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Panel title</h3>
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <h3><b>Panel with footer</b></h3>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              Panel content
+            </div>
+            <div class="panel-footer">Panel footer</div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <h3><b>Contextual Panels</b></h3>
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title">Panel title</h3>
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+          </div>
+          <div class="panel panel-success">
+            <div class="panel-heading">
+              <h3 class="panel-title">Panel title</h3>
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+          </div>
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Panel title</h3>
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+          </div>
+          <div class="panel panel-warning">
+            <div class="panel-heading">
+              <h3 class="panel-title">Panel title</h3>
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+          </div>
+          <div class="panel panel-danger">
+            <div class="panel-heading">
+              <h3 class="panel-title">Panel title</h3>
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <h2><b>Wells</b></h2>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="well">
+            Well
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="well well-lg">
+            Well Large
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="well well-sm">
+            Well Small
           </div>
         </div>
       </div>
